@@ -1,7 +1,7 @@
 function(doc) {
-  if (doc.type == "thing" && doc.contexts) {
+  if (doc.type == "thing" && doc.complete != 100 && doc.contexts) {
     doc.contexts.forEach(function (context) {
-      emit(context, {
+      emit([context, doc.start], {
         title : doc.title,
         start : doc.start,
         due : doc.due || null
