@@ -1,8 +1,8 @@
 function(doc) {
-  if (doc.type == "thing" && doc.projects) {
+  if (doc.type == "thing" && doc.complete != 100 && doc.projects) {
     doc.projects.forEach(function (project) {
       emit([project, doc.start], {
-        description : doc.description,
+        title : doc.title,
         start : doc.start,
         due : doc.due || null
       });    
