@@ -1,0 +1,3 @@
+function(keys, values) {
+  return sum(values);
+}
